--- a/Class_Project/Testing/Training_an_Image_Classifier.ipynb
+++ b/Class_Project/Testing/Training_an_Image_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFxmTrVbBnRYzyfuu8lrad",
+      "authorship_tag": "ABX9TyOwjp49Gjsz3JmTRNw25dAD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For this tutorial, we will use the CIFAR10 dataset. It has the classes: ‘airplane’, ‘automobile’, ‘bird’, ‘cat’, ‘deer’, ‘dog’, ‘frog’, ‘horse’, ‘ship’, ‘truck’. The images in CIFAR-10 are of size 3x32x32, i.e. 3-channel color images of 32x32 pixels in size.\n",
+        "Ddatasest: CIFAR10\n",
+        "It has the classes: ‘airplane’, ‘automobile’, ‘bird’, ‘cat’, ‘deer’, ‘dog’, ‘frog’, ‘horse’, ‘ship’, ‘truck’. The images in CIFAR-10 are of size 3x32x32, i.e. 3-channel color images of 32x32 pixels in size.\n",
         "\n",
+        "Steps:\n",
         "*   Load and normalize the CIFAR10 training and test datasets using\n",
         "*   torchvision\n",
         "*   Define a Convolutional Neural Network\n",
         "*   Define a loss function\n",
         "*   Train the network on the training data\n",
-        "*   Test the network on the test data"
+        "*   Test the network on the test data\n",
+        "\n"
       ],
       "metadata": {
         "id": "bguI8HWRVbf4"
