--- a/ViTs.ipynb
+++ b/ViTs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNpASb1C//kXSPCHcxOHfi1",
+      "authorship_tag": "ABX9TyOz86q2EO2PcNrI8fmm7cpG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,10 +64,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install kaggle\n",
-        "!mkdir ~/.kaggle\n",
-        "!cp kaggle.json ~/.kaggle/\n",
-        "!chmod 600 ~/.kaggle/kaggle.json"
+        "!pip install kaggle"
       ],
       "metadata": {
         "colab": {
